# laundry-unit-testing

./: .gitignore  LICENSE.txt  README.md  README.txt  setup.cfg
src/laundryCode/: hitungHarga.py  tempCodeRunnerFile.py
src/laundry_unit_testing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_hitung_harga.py
