[metadata]
name = laundry_unit_testing
version = 1.0.0
author = Muhammad Abdiel Al Hafiz
author_email = dielz032@gmail.com
description = A simple laundry unit testing
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/dlzcods/laundry-unit-testing
project_urls =
    repository = https://github.com/dlzcods/laundry-unit-testing
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src